# axon

./: .gitignore  PLAN.md  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 64d85d628cf0_initial_schema.py  a87165256655_add_cohort_and_cohort_samples_tables.py  add_conversation_samples.py  add_knowledge_documents.py  b1234567890a_add_neuropathology_diagnosis.py
apps/web/: components.json  jest.config.js  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.jest.json  tsconfig.tsbuildinfo
apps/web/src/: middleware.ts
docs/: DATABASE_SETUP.md
scripts/: import_all.py  quick_import.py  setup_db.sh  start_api.sh
src/axon/: __init__.py  config.py
src/axon/agent/: __init__.py  chat.py  chat_with_tools.py  database_queries.py  icd_mapping.py  persistence.py  prompts.py  tools.py
src/axon/api/: __init__.py  dependencies.py  main.py  schemas.py
tests/: __init__.py  conftest.py  test_copathology_detection.py
tests/test_agent/: test_agent_selection_persistence.py  test_conversation_persistence.py  test_hallucination_detection.py  test_icd_mapping.py  test_knowledge_tools.py  test_persistence_samples.py  test_streaming.py  test_tools.py
tests/test_api/: test_samples.py
tests/test_cli/: test_chat_selection_display.py
tests/test_db/: __init__.py  test_conversation_samples.py  test_models.py
tests/test_export/: __init__.py  test_service.py
tests/test_ingest/: __init__.py  test_importer.py  test_nih_adapter.py
tests/test_knowledge/: __init__.py  test_chunker.py  test_ingestion.py  test_scraper.py
tests/test_matching/: __init__.py  test_matcher.py  test_statistics.py
tests/test_rag/: __init__.py  test_embeddings.py  test_retrieval.py  test_vector_search.py
(+108 files in other folders)
