[project]
name = "axon"
version = "0.1.0"
description = "Brain Bank Discovery System - AI-powered brain tissue sample search"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    
    # Database
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "pgvector>=0.2.4",
    "alembic>=1.13.1",
    
    # AI/ML
    "anthropic>=0.18.0",
    "openai>=1.12.0",
    "langchain>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-community>=0.0.20",
    
    # Document Processing
    "pypdf>=4.0.0",
    "unstructured>=0.12.0",
    
    # Data Processing
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    
    # Terminal UI
    "rich>=13.7.0",
    "prompt-toolkit>=3.0.43",
    "typer>=0.9.0",
    
    # Utilities
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.26.0",
    "tenacity>=8.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "aiosqlite>=0.19.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
axon = "axon.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/axon"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true

